<resources>
    <string name="app_name">Restaurantes</string>
    <string name="facebook_app_id">2649377325134101</string>
    <string name="fb_login_protocol_scheme">fb2649377325134101</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="bienvenido">¡Bienvenido!</string>
    <string name="ingresar">Ingresar</string>
    <string name="ingresarFB">Ingresar con Facebook</string>
    <string name="recuperarPass">Recuperar Contraseña</string>
    <string name="registrarse">Registrarse</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
